--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pager.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pager.scss
@@ -15,47 +15,22 @@
   .pager__item--last,
   .pager__item--next,
   .pager__item--previous {
+    --link-base-current-color: var(--palette--link-base-color);
+    --link-base-hover-current-color: var(--palette--link-base-hover-color);
+
     a {
-      color: var(--palette--secondary);
       text-decoration: none;
 
       &:focus,
       &:hover {
-        color: var(--palette--secondary);
         text-decoration: underline;
         background-image: none;
         background-color: transparent;
-
-        .hb-dark-pattern &,
-        .hb-dark-inversion .views-element-container & {
-          color: var(--palette--tertiary-highlight);
-        }
       }
 
       .hb-dark-pattern &,
       .hb-dark-inversion .views-element-container & {
         border: none;
-        color: var(--palette--tertiary-reversed);
-      }
-
-      @include hb-colorful {
-        .hc-pairing-ocean & {
-          color: var(--palette--secondary-darken-12);
-        }
-      }
-
-      @include hb-traditional {
-        // Override link color and icon color for the Firefinch color pairing.
-        .ht-pairing-firefinch .hb-well &,
-        .ht-pairing-firefinch .hs-paragraph-style--well &,
-        .ht-pairing-firefinch .hs-paragraph-style--well-full-width & {
-          color: var(--palette--tertiary);
-
-          &:hover,
-          &:focus {
-            color: var(--palette--tertiary-darken-20);
-          }
-        }
       }
     }
   }
@@ -70,6 +45,8 @@
   }
 
   &__item {
+    --link-base-current-color: var(--palette--gray-dark);
+
     &:first-of-type {
       margin-left: 0;
     }
@@ -79,7 +56,6 @@
     }
 
     a {
-      color: var(--palette--gray-dark);
       display: inline-block;
       padding: hb-calculate-rems(6px) hb-calculate-rems(9px);
       border-radius: $hb-button-border-radius;
@@ -107,75 +83,38 @@
         .hb-dark-pattern &,
         .hb-dark-inversion .views-element-container & {
           background-color: transparent;
-          border-color: var(--palette--tertiary-highlight);
+          border-color: var(--link-base-hover-current-color);
         }
       }
     }
 
     &.is-active {
+      --link-base-current-color: var(--palette--white);
+      --link-base-hover-current-color: var(--palette--white);
+
       background-color: var(--palette--gray-dark);
       display: inline-block;
       border-radius: $hb-button-border-radius;
 
-      a {
-        color: var(--palette--white);
 
+      a {
         &:hover,
         &:focus {
           cursor: default;
           background-color: transparent;
         }
-
-        .hb-dark-pattern &,
-        .hb-dark-inversion .views-element-container & {
-          color: var(--palette--tertiary-highlight);
-        }
       }
     }
 
-    // Warbler color pairing override.
-    @include hb-traditional {
-      .ht-pairing-warbler & {
-        a {
-          color: var(--palette--gray-dark);
+    .hb-dark-pattern &,
+    .hb-dark-inversion .views-element-container & {
+      --link-base-current-color: var(--palette--link-base-color-dark);
+      --link-base-hover-current-color: var(--palette--link-base-hover-color-dark);
+    }
 
-          &:hover, &:focus {
-            color: var(--palette--tertiary-darken-20);
-          }
-
-        }
-
-        .hs-button, .hs-button a,
-        .hs-button--big, .hs-button--big a {
-          &, &:hover, &:focus {
-            color: var(--palette--white);
-          }
-        }
-
-        .hs-secondary-button, .hs-secondary-button a {
-          color: var(--palette--secondary);
-
-          &:hover, &:focus {
-            color: var(--palette--white);
-          }
-        }
-
-        &.is-active {
-          a {
-            &, &:hover, &:focus {
-              color: var(--palette--white);
-            }
-          }
-        }
-
-        &--first, &--last, &--next, &--previous {
-          a {
-            &, &:hover, &:focus {
-              color: var(--palette--secondary);
-            }
-          }
-        }
-      }
+    // Buttons in infinite scroll pager.
+    a.hs-button {
+      @include hb-button;
     }
   }
 }
